# tradpal

./: .env.example  .env.heavy  .env.light  .flake8  .gitignore  DEVELOPMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  Makefile  PERFORMANCE_PROFILES.md  README.md  README.md.backup  SERVICE_CONSOLIDATION_PLAN.md  VSCODE_FIX_README.md  best_rl_model_0.pth  concurrent_test.json  debug_ml_signals.py  dependency_catalog.txt  discovery_recommended_config_20251014_151905.json  docker-compose.dev.yml  docker-compose.yml  environment.yml  main.py  mypy.ini  optimize_discovery_params.py  pyproject.toml  pyproject.toml.backup  pytest.ini  requirements.txt  setup_pypi.py  streamlit_app.py  test_bull_market.py  test_config_application.py  test_improved_backtesting.py  test_kaggle_integration.py  test_ml_integration.py  test_portfolio_manager.py
.github/: copilot-instructions.md  copilot-instructions_backup.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: docker-release.yml  kubernetes-deploy.yml  publish-pypi.yml
aws/: deploy.sh  user-data.sh
backups/: backtester.py.backup
config/: .env.example  .env.light  core_settings.py  ml_settings.py  performance_settings.py  security_settings.py  service_settings.py  settings.py
config/tools/: pyproject.toml
docs/: ADVANCED_FEATURES_ARCHITECTURE.md  ADVANCED_ML_IMPLEMENTATION.md  ADVANCED_SIGNAL_GENERATION.md  API_GATEWAY.md  BROKER_INTEGRATION.md  CONTRIBUTING.md  DATA_GOVERNANCE_IMPLEMENTATION.md  DATA_MESH_IMPLEMENTATION.md  EVENT_DRIVEN_ARCHITECTURE.md  EXPERIMENTAL_FEATURES.md  IMPLEMENTATION_SUMMARY.md  MONITORING_SETUP.md  PERFORMANCE_ENHANCEMENTS.md  PERFORMANCE_OUTPERFORMANCE_REPORT.md  SETUP_GUIDE.md  SIGNAL_GENERATOR_ARCHITECTURE.md  TRADING_BOT_ARCHITECTURE.md  TRADING_SERVICE_ARCHITECTURE.md  TRADING_SERVICE_ARCHITECTURE_V2.md  TRADPAL_MARKETING_PRESENTATION.md  USER_GUIDE.md
examples/: advanced_ml_examples.py  advanced_ml_trading_demo.py  async_data_fetching_demo.py  btc_usdt_backtest.ipynb  chunked_data_processing_demo.py  demo_performance_features.py  discovery_params_demo.py  event_driven_trading_demo.py  event_system_demo.py  evolution_demo.py  extended_bot_optimization_example.py  gpu_trading_model_example.py  market_regime_demo.py  memory_mapped_data_demo.py  ml_training_guide.ipynb  portfolio_management_demo.py  sentiment_analysis_demo.py  shap_integration_demo.py  simple_advanced_ml_demo.py  vectorization_performance_demo.py
infrastructure/monitoring/: alertmanager.yml  docker-compose.yml  prometheus.yml
integrations/: README.md  __init__.py  base.py  example.py
integrations/brokers/: __init__.py  base_broker.py  ccxt_broker.py
integrations/discord/: __init__.py  discord.py
integrations/email_integration/: __init__.py  config.py  email.py
integrations/sms/: __init__.py  config.py  sms.py
integrations/telegram/: __init__.py  bot.py  config.py
integrations/webhook/: __init__.py  config.py  webhook.py
k8s/: deployment.yaml
monitoring/prometheus/: prometheus.yml
output/: discovery_results.json
output/ensemble/: BTC_USDT_1h_performance_history.json  BTC_USD_1h_performance_history.json
scripts/: analyze_data_quality.py  complete_performance_analysis.py  comprehensive_performance_analysis.py  comprehensive_test_suite.py  crash_analysis.py  debug_signals.py  demo_performance.py  enhanced_backtest.py  live_trading_setup.py  manage_dependencies.py  manage_integrations.py  performance_analysis.py  performance_benchmark.py  portfolio_demo.py  quick_discovery_test.py  run_integrated.py  setup_dev.sh  setup_local.sh  test_adaptive.py  test_advanced_signals.py  test_alternative_data_sources.py  test_complete_system_integration.py  test_data_service.py  test_enhanced_data_quality.py  test_enhanced_ml.py  test_extended_discovery.py  test_ga_enhanced.py  test_ga_simple.py  test_gpu_acceleration.py  test_integrated_paper_trading.py  test_market_regime_integration.py  test_monitoring_system.py  test_multi_market_sources.py  test_sentiment_analysis.py  test_service_clients.py  test_shap_integration.py  test_simple_strategies.py  test_single_backtest.py  test_trading_bot.py  test_trading_bot_simple.py  (+3 more)
services/: README_TEMPLATE.md  service_template.py
services/alert_forwarder/: Dockerfile  Makefile  cli.py  config.py  docker-compose.yml  forwarder.py  requirements.txt
services/alternative_data_service/: __init__.py
services/api_gateway/: Dockerfile  requirements.txt
services/core/: __init__.py  (+13 more)
src/: advanced_ml_predictor.py  advanced_ml_predictor.py.bak  ai_trading_bot.py  audit_logger.py  backtester.py  cache.py  config_validation.py  data_fetcher.py  data_quality_monitor.py  discovery.py  discovery_cache.py  error_handling.py  fitness.py  indicators.py  input_validation.py  logging_config.py  ml_automl.py  ml_ensemble.py  ml_predictor.py  ml_predictor.py.backup  ml_predictor_clean.py  ml_pytorch_models.py  multi_asset_portfolio.py  output.py  paper_trading.py  parallel_backtester.py  performance.py  portfolio_manager.py  risk_manager.py  secrets_manager.py  sentiment_analyzer.py  shap_explainer.py  signal_generator.py  walk_forward_optimizer.py  websocket_data_fetcher.py
tests/: README.md  __init__.py  conftest.py  test.py  test_adaptive_config.py  test_advanced_ml.py  test_advanced_signals.py  test_ai_trading_bot.py  test_api_integrations.py  test_audit_logging.py  test_best_config.py  test_bull_market.py  test_config_validation.py  test_configuration_aware.py  test_edge_cases.py  test_error_handling.py  test_improved_backtesting.py  test_kaggle_integration.py  test_market_regime_analysis.py  test_ml_enhancements.py  test_ml_integration.py  test_ml_predictor.py  test_monitoring.py  test_multi_model_backtesting.py  test_optimized_features.py  test_paper_trading.py  test_performance.py  test_portfolio_manager.py  test_profile_validation.py  test_rate_limiting.py  test_robust_cross_validator.py  test_secrets_manager.py  test_sentiment_analysis.py  test_shap_integration.py  test_ta_lib_integration.py
wiki/: Home.md
(+538 files in other folders)
