[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradpal"
version = "2.5.1"
description = "Advanced Python trading system with multi-timeframe analysis, ML enhancement, portfolio management, and real-time sentiment analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "TradPal Team", email = "contact@tradpal.dev"},
]
maintainers = [
    {name = "TradPal Team", email = "contact@tradpal.dev"},
]
keywords = [
    "trading",
    "technical-analysis",
    "cryptocurrency",
    "bitcoin",
    "forex",
    "machine-learning",
    "sentiment-analysis",
    "algorithmic-trading",
    "backtesting",
    "risk-management",
    "portfolio-management",
    "quantitative-finance",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # Core dependencies shared across all services (exact versions from catalog)
    "pandas==2.1.4",
    "numpy==1.24.3",
    "python-dotenv==1.0.0",
    "requests==2.32.4",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "structlog==23.2.0",
    "prometheus-client==0.19.0",
    "psutil==5.9.7",
]

[project.optional-dependencies]
dev = [
    "black==24.3.0",
    "isort==5.13.2",
    "flake8==6.1.0",
    "mypy==1.7.1",
    "pytest==7.4.4",
    "pytest-asyncio==0.21.1",
    "pytest-mock==3.12.0",
    "tomli==2.0.1; python_version < '3.11'",
]
all = [
    "tradpal[dev]",
]

[project.urls]
Homepage = "https://github.com/wurstgulasch/tradpal"
Documentation = "https://github.com/wurstgulasch/tradpal#readme"
Repository = "https://github.com/wurstgulasch/tradpal.git"
Issues = "https://github.com/wurstgulasch/tradpal/issues"
Changelog = "https://github.com/wurstgulasch/tradpal/blob/main/CHANGELOG.md"

[project.scripts]
tradpal = "src.main:main"
tradpal-live = "src.main:run_live_mode"
tradpal-backtest = "src.main:run_backtest_mode"
tradpal-webui = "services.web_ui.app:main"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "services*", "integrations*", "scripts*"]
exclude = ["tests*", "docs*", "examples*", "k8s*", "aws*", "monitoring*", "cache*", "output*", "logs*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml", "*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "-ra",
    "--disable-warnings"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "performance: marks tests as performance tests",
    "asyncio: marks tests as async tests"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::FutureWarning"
]
